--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
 <li>Fast (top performer on <a href="http://www.palmmedia.de/blog/2011/8/30/ioc-container-benchmark-performance-comparison">IoC Container Shootout</a>) </li>
 <li>Small</li>
 </ul><h1>
-<a name="documentation" class="anchor" href="#documentations"><span class="octicon octicon-link"></span></a>Documentations/h1>
+<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h1>
 
-<p><ul>
+<p>
+<ul>
   {% for post in site.posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
   {% endfor %}
-</ul></p>
+</ul>
+</p>
 
 <h1>
 <a name="example-usage-and-quickstart" class="anchor" href="#example-usage-and-quickstart"><span class="octicon octicon-link"></span></a>Example Usage and Quickstart</h1>
